# Assignment-1

./: README.md  __init__.py  area_of_circle  assignment_1_genAIuse.txt  bisection_solver  calculate_kinetic_energy  calculate_potential_energy  elastoplastic.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  pyproject.toml  pythagorean_theorem  test_area_of_circle  test_bisection_solver  test_kinetic_energy  test_potential_energy  test_pythagorean_theorem  test_volume_of_cube  tutorials_bisection  tutorials_bisection.py  tutorials_newton.md  volume_of_cube
.github/workflows/: test.yml
ElastoplasticModel/: README.md  pyproject.toml
ElastoplasticModel/src/: README.md  elastoplastic.py  pyproject.toml
ElastoplasticModel/tests/: examples.py  test_elastoplastic.py
bisection/: README.md  pyproject.toml  tutorials_bisection.md
bisection/src/bisection/: bisection_solver  bisection_solver.py
bisection/tests/: examples.py  test_bisection  test_bisection.py
newton/: README.md  __init__.py  pyproject.toml  test_newton.py  tutorials_newton  tutorials_newton.md
newton/src/newton/: newton_solver.py
newton/tests/: examples.py  test_newton.py
part 1/: __init__.py  tutorials_newton
part 1/tests/: test_newton.py
src/newton/: newton.py
tests/: examples  test_newton.py
warm up/: pyproject.toml
